--- a/render.yaml
+++ b/render.yaml
@@ -5,13 +5,4 @@ services:
     plan: free
     autoDeploy: true
     envVars:
-      - key: N8N_BASIC_AUTH_ACTIVE
-        value: true
-      - key: N8N_BASIC_AUTH_USER
-        value: admin
-      - key: N8N_BASIC_AUTH_PASSWORD
-        value: changeme
-      - key: GENERIC_TIMEZONE
-        value: Africa/Nairobi
-      - key: WEBHOOK_URL
-        value: https://firstn8nproject.onrender.com
+      - fromDotEnv: true
